deploy: ebb4fa01a5fbb3f012a3179ad3ddeb556e068d73

--- a/404.html
+++ b/404.html
@@ -88,9 +88,9 @@
         <div class="d-none d-lg-block">
         <div class="intro-text">
     <div>
-        <p><strong>International non profit society</strong> gathering 
+        <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
-        and individuals<br/><strong>Empower</strong> digital projects by promoting 
+        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
         <ul>
@@ -123,9 +123,9 @@
         <div class="row d-lg-none">
             <div class="intro-text">
     <div>
-        <p><strong>International non profit society</strong> gathering 
+        <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
-        and individuals<br/><strong>Empower</strong> digital projects by promoting 
+        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
         <ul>
