--- a/pages/community-meetings/index.html
+++ b/pages/community-meetings/index.html
@@ -77,12 +77,11 @@
 <main class="container ">
     
     <h1>Community Meetings</h1>
-    <p>In April 2021 e-editions will launch a series of regular community meetings that will be held on the first Tuesday of each month at 17:00 CET/CEST.</p>
-<p>The objective of these meetings is to give the community a space to discuss topics and present their editions, projects, and solutions.</p>
-<p>As for the format, a short presentation (10-20 minutes) of the topic or the project will be followed by an open discussion. Meetings will last one hour.</p>
-<p>The community meetings will be held online and will not be recorded: <a href="https://meet.existsolutions.com/eeditiones">https://meet.existsolutions.com/eeditiones</a></p>
-<p>We warmly invite you to propose topics <a href="info@e-editiones.org">info@e-editiones.org</a> for the following community meetings dates.</p>
-<p>See <a href="/tags/meetups/">list of meetups</a></p>
+    <figure><img src="/img/redd-5U_28ojjgms-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@reddalec?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Redd</a> on <a href="https://unsplash.com/s/photos/meeting?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></figcaption></figure>
+<p>In April 2021 e-editions have launched a series of regular community meetings that will be held on the first Tuesday of each month at 17:00 CET/CEST. Meetings will be held online at <a href="https://meet.existsolutions.com/eeditiones">https://meet.existsolutions.com/eeditiones</a> and will not be recorded. Registration is not required to attend.</p>
+<p>The objective of these meetings is to give the community a space to discuss topics and present editions, projects, challenges and solutions. Meetings will last one hour and a short presentation of the topic or the project will be followed by an open discussion.</p>
+<p>We warmly invite you to propose topics at <a href="info@e-editiones.org">info@e-editiones.org</a> for the future community meetings dates.</p>
+<p>See the <a href="/tags/meetups/">list of past and scheduled meetups</a></p>
 
 </main>
 
