deploy: 89d1932c530a769538f630dbc683fd96ad0f5bcf

--- a/page-list/index.html
+++ b/page-list/index.html
@@ -178,7 +178,7 @@
   </tr>
   <tr>
     <td><a href="/pages/how-to-become-a-member/"><code>/pages/how-to-become-a-member/</code></a></td>
-    <td>How to become a member</td>
+    <td>How to join</td>
   </tr>
   <tr>
     <td><a href="/pages/"><code>/pages/</code></a></td>
