--- a/pages/how-to-become-a-member/index.html
+++ b/pages/how-to-become-a-member/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to become a member</title>
+    <title>How to join</title>
     <meta name="description" content="I am writing about my experiences as a naval navel-gazer.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="/11ty-homepage/css/index.css">
@@ -76,11 +76,19 @@
 
 <main class="container ">
     
-    <h1>How to become a member</h1>
-    <p>There are two kinds of membership: institutional and personal/individual.</p>
-<p>The annual membership fee for institutional members (legal entities) is CHF 500.– (Swiss Francs), while the annual fee for individuals (natural persons) is reduced to CHF 50.–. However, only fully paying members have voting rights.</p>
-<p>To become a member please contact the board: <a href="mailto:info@e-editiones.org">info@e-editiones.org</a></p>
-<p>The board will then propose your membership to the assembly (by email), which has to approve.</p>
+    <h1>How to join</h1>
+    <blockquote>
+<p>re-using components, pooling resources and sharing best practices benefits everyone in the community and ensures our projects remain online and maintained for the decades to come</p>
+</blockquote>
+<p>To become a member please contact <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
+<h3>Institutional membership</h3>
+<p>Do you represent a legal entity in the broadly understood research, academic or cultural heritage domains? With institutional membership contribution available from CHF 500.– you will benefit from full membership rights and receive e-editiones support in funding proposals.</p>
+<h3>Support membership</h3>
+<p>Projects and parts of larger organizations unable to have their formal representative proceed with the institutional membership can nevertheless benefit from a special &quot;support&quot; relationship with the society available from CHF 600.– Equivalent in all but name to the institutional membership.</p>
+<h3>Individual membership</h3>
+<p>Natural persons membership fee is reduced to CHF 50.– In justified cases individual membership fee may be waived at discretion of the board.</p>
+<figure><img src="/img/krakenimages-Y5bvRlcCx8k-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@krakenimages?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">krakenimages</a> on <a href="https://unsplash.com/s/photos/member?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption></figure>
+<p>‍</p>
 
 </main>
 
