--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -85,69 +85,69 @@
                 <button class="btn btn-warning">Join</button>
             </div>
         </div>
-        <div class="d-none d-lg-block">
-        <div class="intro-text">
-    <div>
+        <div class="container d-none d-lg-block">
+        <div class="intro-text container">
+    <div class="row justify-content-md-center m-3">
         <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
         scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
-        <ul>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                <img src="img/poet-svgrepo-com.svg" height="32">
-                <span>researchers</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/university-svgrepo-com.svg" height="32">
-                    <span>memory institutions</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/school-material-svgrepo-com.svg" height="32">
-                    <span>developers</span>
-                </a>
-            </li>
-        </ul>
+    </div>
+    <div class="row justify-content-md-center m-3 gx-5">
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+            <img src="img/poet-svgrepo-com.svg" height="32">
+            <span>researchers</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/university-svgrepo-com.svg" height="32">
+                <span>memory institutions</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/school-material-svgrepo-com.svg" height="32">
+                <span>developers</span>
+            </a>
+        </div>
     </div>
 </div>
         </div>
     </div>
 </div>
 <main class="home">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row d-lg-none">
-            <div class="intro-text">
-    <div>
+            <div class="intro-text container">
+    <div class="row justify-content-md-center m-3">
         <p>We are an <strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
         scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
-        <ul>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                <img src="img/poet-svgrepo-com.svg" height="32">
-                <span>researchers</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/university-svgrepo-com.svg" height="32">
-                    <span>memory institutions</span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/home/" class="shortcut btn">
-                    <img src="img/school-material-svgrepo-com.svg" height="32">
-                    <span>developers</span>
-                </a>
-            </li>
-        </ul>
+    </div>
+    <div class="row justify-content-md-center m-3 gx-5">
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+            <img src="img/poet-svgrepo-com.svg" height="32">
+            <span>researchers</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/university-svgrepo-com.svg" height="32">
+                <span>memory institutions</span>
+            </a>
+        </div>
+        <div class="col">
+            <a href="pages/home/" class="shortcut btn">
+                <img src="img/school-material-svgrepo-com.svg" height="32">
+                <span>developers</span>
+            </a>
+        </div>
     </div>
 </div>
         </div>
@@ -171,7 +171,7 @@
   </tbody>
 </table>
 </div>
-            <aside class="col-3">
+            <aside class="col-4">
                 <h3>Tags</h3>
                 <ul class="cloud" role="navigation" aria-label="tag cloud" data-show-value>
   
