--- a/pages/how-to-contribute/index.html
+++ b/pages/how-to-contribute/index.html
@@ -77,17 +77,26 @@
 <main class="container ">
     
     <h1>How to Contribute</h1>
-    <p>There are many way how you could support us and contribute:</p>
+    <blockquote>
+<p>re-using components, <strong>pooling resources</strong> and sharing best practices <strong>benefits everyone</strong> in the community and ensures our projects remain online and maintained for the decades to come</p>
+</blockquote>
+<h2>Become a Member or Supporter</h2>
+<p>We would be thrilled if you can convince your organization to <a href="how-to-become-a-member">become a member of e-editiones</a>. Institutional membership gives our society the best leverage when applying for funding or infrastructural support. If this is difficult in your institution, consider our special Support membership or join the society as an individual.</p>
+<h2>Add your project to our registry</h2>
+<p>We love to hear back from people and organizations who use software or resources curated by e-editiones. Add your project, however large or small, to our registry. We are more than happy to list initiatives already at an early stage of development. Your entry lets us to have awareness of the reaches of our community and demonstrate impact to the funding bodies. It also fosters communication and collaboration between the projects.</p>
 <h2>Source Code on Github</h2>
-<p>You can find the source code of the TEI Publisher and many examples on <a href="https://github.com/eeditiones">GitHub</a></p>
+<p>Found a bug? Miss a feature? File an issue on our <a href="https://github.com/eeditiones">GitHub</a>. Even better if you can help us by sharing your fixes and features. Don't be shy to make a Pull Request!</p>
+<h2>Help with funding</h2>
+<p>We're happy to join funding bids which relate to the goals of our society or accept partners contributing seed funds to the proposals we make. Need a feature but can't finance it in full? Please get in touch and we'll try to pool resources within our community to make it happen. Last but not least, we have a <a href="https://www.paypal.com/donate?hosted_button_id=ST7PNHJK3FMX8">Donate</a> button and your contributions go into open source development.</p>
+<h2>Share your expertise</h2>
+<p>There are community members who struggle with one or another aspect of their project. Enhance our <a href="https://faq.teipublisher.com/">FAQ</a> or join the <a href="https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg">Slack workspace</a> and help answer questions and troubleshoot problems other users may have. We also welcome contributions to our website discussing particular use cases, best practices or solutions.</p>
 <h2>Translations on Crowdin</h2>
-<p>There are already a few translations of the TEI Publisher. If you could create a new translation or review an existing one, please go to <a href="https://crwd.in/tei-publisher">Crowdin</a> and help us to make the TEI Publisher even more international.</p>
+<p>Thanks to our generous users, TEI Publisher is already localized into 20 languages! If you could help us with a new translation or review an existing one, please go to <a href="https://crwd.in/tei-publisher">Crowdin</a> to make the TEI Publisher even more international. Just one hour of your time can make a huge difference.</p>
 <h2>TEI Examples</h2>
-<p>To make the TEI Publisher as versatile as possible we are loocking for TEI examples which can be used for development, tests and also for teaching. The collection is hosted on <a href="https://github.com/eeditiones/tei-examples">GitHub</a>.</p>
-<h2>Become a Member</h2>
-<p>If you made it to this point it could be a good idea to <a href="how-to-become-a-member">become a member of e-editiones</a>. It is fairly easy and we would be thrilled 😜.</p>
-<h2>e-editiones Logo</h2>
-<p>If you are a already a member of e-editiones you are encouraged to use our member Logo which you can grab on <a href="https://github.com/eeditiones/logos">GitHub</a>.</p>
+<p>To make the TEI Publisher as versatile as possible we are looking for TEI examples which can be used for development, tests and also for teaching. The collection is hosted on <a href="https://github.com/eeditiones/tei-examples">GitHub</a>.</p>
+<h2>Tell people about us</h2>
+<p>Follow us on <a href="http://www.twitter.com/EEditiones">Twitter</a> and share related posts.</p>
+<p>We'll be grateful for small credit on your project page, so just grab the most fitting logo from <a href="https://github.com/eeditiones/logos">GitHub</a>. If you are a already a member of e-editiones you are especially encouraged to use our member logo.</p>
 
 </main>
 
