deploy: 1d54e6dda091b4f45494260119d13cbcaf0f9143

--- a/page-list/index.html
+++ b/page-list/index.html
@@ -166,7 +166,7 @@
   </tr>
   <tr>
     <td><a href="/posts/embeding-tei-publisher-components/"><code>/posts/embeding-tei-publisher-components/</code></a></td>
-    <td>Embeding TEI Publisher Components in Wordpress</td>
+    <td>TEI Publisher Components in Wordpress</td>
   </tr>
   <tr>
     <td><a href="/pages/board/"><code>/pages/board/</code></a></td>
