--- a/map/index.html
+++ b/map/index.html
@@ -57,6 +57,8 @@
         <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
     </li><li class="nav-item">
         <a href="/11ty-homepage/pages/workshops/" class="nav-link">Workshops</a>
+    </li><li class="nav-item">
+        <a href="/11ty-homepage/map/" class="nav-link active">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
         <a class="dropdown-toggle nav-link"
