--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -47,6 +47,8 @@
         <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
     </li><li class="nav-item">
         <a href="/11ty-homepage/pages/workshops/" class="nav-link active">Workshops</a>
+    </li><li class="nav-item">
+        <a href="/11ty-homepage/map/" class="nav-link">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
         <a class="dropdown-toggle nav-link"
