--- a/pages/how-to-become-a-member/index.html
+++ b/pages/how-to-become-a-member/index.html
@@ -6,11 +6,11 @@
     <title>How to join</title>
     <meta name="description" content="I am writing about my experiences as a naval navel-gazer.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/11ty-homepage/css/index.css">
-    <link rel="stylesheet" href="/11ty-homepage/css/prism-base16-monokai.dark.css">
-    <link rel="stylesheet" href="/11ty-homepage/css/prism-diff.css">
-    <link rel="alternate" href="/11ty-homepage/feed/feed.xml" type="application/atom+xml" title="e-editiones">
-    <link rel="alternate" href="/11ty-homepage/feed/feed.json" type="application/json" title="e-editiones">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/prism-base16-monokai.dark.css">
+    <link rel="stylesheet" href="/css/prism-diff.css">
+    <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="e-editiones">
+    <link rel="alternate" href="/feed/feed.json" type="application/json" title="e-editiones">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Zilla+Slab:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -26,48 +26,48 @@
 
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/11ty-homepage/"><img src="/11ty-homepage/img/e-editiones-logo-color.svg"></a>
+        <a class="navbar-brand" href="/"><img src="/img/e-editiones-logo-color.svg"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
-        <a href="/11ty-homepage/" class="nav-link">Home</a>
+        <a href="/" class="nav-link">Home</a>
     </li><li class="nav-item dropdown">
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
-        <a href="/11ty-homepage/pages/getting-started/" class="nav-link">Getting Started</a>
+        <a href="/pages/getting-started/" class="nav-link">Getting Started</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/get-in-touch/" class="nav-link">Get in Touch</a>
+        <a href="/pages/get-in-touch/" class="nav-link">Get in Touch</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
+        <a href="/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
+        <a href="/pages/community-meetings/" class="nav-link">Community Meetings</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/workshops/" class="nav-link">Workshops</a>
+        <a href="/pages/workshops/" class="nav-link">Workshops</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/map/" class="nav-link">TEI Publisher Registry</a>
+        <a href="/map/" class="nav-link">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
         <ul class="dropdown-menu"><li class="nav-item">
-        <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+        <a href="/pages/strategy/" class="nav-link">Strategy</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
+        <a href="/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
+        <a href="/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/board/" class="nav-link">Board</a>
+        <a href="/pages/board/" class="nav-link">Board</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/members/" class="nav-link">Members</a>
+        <a href="/pages/members/" class="nav-link">Members</a>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/pages/how-to-become-a-member/" class="nav-link active">How to become a member</a>
+        <a href="/pages/how-to-become-a-member/" class="nav-link active">How to become a member</a>
     </li></ul>
     </li><li class="nav-item">
-        <a href="/11ty-homepage/posts/" class="nav-link">Archive</a>
+        <a href="/posts/" class="nav-link">Archive</a>
     </li><li class="nav-item">
                     <a href="/tags/events/" class="nav-link">Events</a>
                 </li>
@@ -97,7 +97,7 @@
 
 <footer></footer>
 
-<!-- Current page: /11ty-homepage/pages/how-to-become-a-member/ -->
+<!-- Current page: /pages/how-to-become-a-member/ -->
 <!--script>
     document.addEventListener('DOMContentLoaded', function() {
     window.addEventListener('scroll', function() {
