deploy: d9fc1a171f15050b93da8699400e941ba2093ebc

--- a/pages/get-in-touch/index.html
+++ b/pages/get-in-touch/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Get in Touch</h1>
     <p>The following channels are open for community discussions. You don't need to be a member to join the conversation, though we certainly encourage you to join forces and become one.</p>
