--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1></h1>
     <p>e-editiones is an international non profit society consisting of owners of smaller and larger edition projects, cultural heritage institutions, and individual researchers. Its goal is to empower digital editions of cultural, scientific, and artistic works by promoting open standards related to digital editions and advancing open source applications based on them.</p>
