--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>TEI Publisher Registry</h1>
     <p>If your are using TEI Publisher, please let us know. Send us the title of your edition, a postal address, url, email and a very short description: <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
