--- a/pages/statuten-des-vereins-e-editiones-german/index.html
+++ b/pages/statuten-des-vereins-e-editiones-german/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Statuten des Vereins e-editiones (German)</h1>
     <p>Revidierte Version vom 5. November 2020</p>
