--- a/pages/strategy/index.html
+++ b/pages/strategy/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Strategy</h1>
     <h2>e-editiones: Focus of the Society</h2>
