--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Workshops</h1>
     <p>Meeting Room: <a href="https://meet.existsolutions.com/workshop">https://meet.existsolutions.com/workshop</a></p>
