--- a/pages/community-meetings/index.html
+++ b/pages/community-meetings/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Community Meetings</h1>
     <figure><img src="/img/redd-5U_28ojjgms-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@reddalec?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Redd</a> on <a href="https://unsplash.com/s/photos/meeting?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></figcaption></figure>
