--- a/pages/getting-started/index.html
+++ b/pages/getting-started/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Getting Started</h1>
     <p>If you want to dive in straight away go to the <a href="https://teipublisher.com/exist/apps/tei-publisher/doc/documentation.xml?id=odd-customization">TEI Publisher Documentation</a>.</p>
