--- a/pages/how-to-become-a-member/index.html
+++ b/pages/how-to-become-a-member/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>How to join</h1>
     <blockquote>
