--- a/pages/member-directory/index.html
+++ b/pages/member-directory/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Member Directory</h1>
     <p>[profilepress-member-directory id=&quot;1&quot;]</p>
