--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-<main class="container ">
+<main class="container tmpl-post">
     
     <h1>Members</h1>
     <h2>Institutional Members</h2>
