deploy: ca7a3cdca11597a1b17450bb1581b1897859e5f2

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -173,12 +173,40 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/posts/tei-vanilla-a-scoop-of-tei-for-everyone/"><code>/posts/tei-vanilla-a-scoop-of-tei-for-everyone/</code></a></td>
+    <td>TEI Vanilla - a scoop of TEI for everyone</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/tei-vanilla-meeting-summary/"><code>/posts/tei-vanilla-meeting-summary/</code></a></td>
+    <td>TEI &quot;Vanilla&quot; meeting summary</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/vscode/"><code>/posts/vscode/</code></a></td>
+    <td>New Visual Studio Code extension for TEI Publisher</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/tei-publisher-7-final/"><code>/posts/tei-publisher-7-final/</code></a></td>
+    <td>TEI Publisher 7: an example of collaborative development</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/osa20/"><code>/posts/osa20/</code></a></td>
+    <td>Open Source Advent</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/cross-search/"><code>/posts/cross-search/</code></a></td>
+    <td>Cross search</td>
+  </tr>
+  <tr>
     <td><a href="/posts/roaster-an-open-api-router-for-exist/"><code>/posts/roaster-an-open-api-router-for-exist/</code></a></td>
     <td>Roaster: an Open API Router for eXist</td>
   </tr>
   <tr>
     <td><a href="/posts/newsletter-2021-1/"><code>/posts/newsletter-2021-1/</code></a></td>
     <td>Newsletter 21/1</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/save-the-dates/"><code>/posts/save-the-dates/</code></a></td>
+    <td>Save the dates</td>
   </tr>
   <tr>
     <td><a href="/pages/community-meetings/"><code>/pages/community-meetings/</code></a></td>
@@ -195,6 +223,14 @@
   <tr>
     <td><a href="/pages/member-directory/"><code>/pages/member-directory/</code></a></td>
     <td>Member Directory</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/contributing-to-tei-publisher-a-gentle-introduction/"><code>/posts/contributing-to-tei-publisher-a-gentle-introduction/</code></a></td>
+    <td>Contributing to TEI Publisher - a gentle introduction</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/fore-humanists-metadata-forms-and-more/"><code>/posts/fore-humanists-metadata-forms-and-more/</code></a></td>
+    <td>For(e) humanists - Metadata, Forms and more</td>
   </tr>
   <tr>
     <td><a href="/pages/map/"><code>/pages/map/</code></a></td>
@@ -215,42 +251,6 @@
   <tr>
     <td><a href="/posts/call-for-proposals-big-prizes/"><code>/posts/call-for-proposals-big-prizes/</code></a></td>
     <td>Call for Proposals</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/tei-community-prize/"><code>/posts/tei-community-prize/</code></a></td>
-    <td>e-editiones receives TEI Community Prize</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/cultural-heritage-grant-ukraine/"><code>/posts/cultural-heritage-grant-ukraine/</code></a></td>
-    <td>Call for Applications / Оголошення про подачу заявок</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/newsletter-2022-1/"><code>/posts/newsletter-2022-1/</code></a></td>
-    <td>Newsletter 22/1</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/names-sell-named-entity-recognition-in-tei-publisher/"><code>/posts/names-sell-named-entity-recognition-in-tei-publisher/</code></a></td>
-    <td>Names sell: Named entity recognition in TEI Publisher</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/past-meetings/"><code>/posts/past-meetings/</code></a></td>
-    <td>Past Community Meetings</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/"><code>/posts/</code></a></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td><a href="/"><code>/</code></a></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td><a href="/map/"><code>/map/</code></a></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td><a href="/tags/"><code>/tags/</code></a></td>
-    <td></td>
   </tr>
   </tbody>
 </table>
