--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -173,6 +173,42 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/posts/tei-community-prize/"><code>/posts/tei-community-prize/</code></a></td>
+    <td>e-editiones receives TEI Community Prize</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/cultural-heritage-grant-ukraine/"><code>/posts/cultural-heritage-grant-ukraine/</code></a></td>
+    <td>Call for Applications / Оголошення про подачу заявок</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/newsletter-2022-1/"><code>/posts/newsletter-2022-1/</code></a></td>
+    <td>Newsletter 22/1</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/names-sell-named-entity-recognition-in-tei-publisher/"><code>/posts/names-sell-named-entity-recognition-in-tei-publisher/</code></a></td>
+    <td>Names sell: Named entity recognition in TEI Publisher</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/past-meetings/"><code>/posts/past-meetings/</code></a></td>
+    <td>Past Community Meetings</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/"><code>/posts/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="/"><code>/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="/map/"><code>/map/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="/tags/"><code>/tags/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
     <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
     <td>Tagged “static”</td>
   </tr>
@@ -215,42 +251,6 @@
   <tr>
     <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
     <td>Tagged “ukraine”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
-    <td>Tagged “hugo”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/pb-component/"><code>/tags/pb-component/</code></a></td>
-    <td>Tagged “pb-component”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
-    <td>Tagged “wordpress”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
-    <td>Tagged “events”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
-    <td>Tagged “meetups”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
-    <td>Tagged “feature”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/nlp/"><code>/tags/nlp/</code></a></td>
-    <td>Tagged “NLP”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/named-entity-recognition/"><code>/tags/named-entity-recognition/</code></a></td>
-    <td>Tagged “named entity recognition”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
-    <td>Tagged “open-api”</td>
   </tr>
   </tbody>
 </table>
