--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -173,6 +173,42 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
+    <td>Tagged “hugo”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/pb-component/"><code>/tags/pb-component/</code></a></td>
+    <td>Tagged “pb-component”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
+    <td>Tagged “wordpress”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
+    <td>Tagged “events”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
+    <td>Tagged “meetups”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
+    <td>Tagged “feature”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/nlp/"><code>/tags/nlp/</code></a></td>
+    <td>Tagged “NLP”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/named-entity-recognition/"><code>/tags/named-entity-recognition/</code></a></td>
+    <td>Tagged “named entity recognition”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
+    <td>Tagged “open-api”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
     <td>Tagged “mei”</td>
   </tr>
