--- a/page-list/index.html
+++ b/page-list/index.html
@@ -181,6 +181,10 @@
     <td>TEI Publisher Components in Wordpress</td>
   </tr>
   <tr>
+    <td><a href="/posts/first-community-event-on-may-18th-2020/"><code>/posts/first-community-event-on-may-18th-2020/</code></a></td>
+    <td>First Community Event on May 18th 2020</td>
+  </tr>
+  <tr>
     <td><a href="/pages/board/"><code>/pages/board/</code></a></td>
     <td>Board</td>
   </tr>
@@ -209,6 +213,10 @@
     <td>Strategy</td>
   </tr>
   <tr>
+    <td><a href="/posts/stay-home-learn-tei-publisher-from-scratch-june-2020/"><code>/posts/stay-home-learn-tei-publisher-from-scratch-june-2020/</code></a></td>
+    <td>«Stay Home Learn TEI Publisher From Scratch»  June 2020</td>
+  </tr>
+  <tr>
     <td><a href="/pages/meeting-minutes/"><code>/pages/meeting-minutes/</code></a></td>
     <td>Meeting Minutes</td>
   </tr>
@@ -225,6 +233,14 @@
     <td>How to Contribute</td>
   </tr>
   <tr>
+    <td><a href="/posts/community-event-on-music-encoding/"><code>/posts/community-event-on-music-encoding/</code></a></td>
+    <td>Community Event on Music Encoding</td>
+  </tr>
+  <tr>
+    <td><a href="/posts/tei-publisher-6-released/"><code>/posts/tei-publisher-6-released/</code></a></td>
+    <td>TEI Publisher 6 released</td>
+  </tr>
+  <tr>
     <td><a href="/posts/tei-publisher-6/"><code>/posts/tei-publisher-6/</code></a></td>
     <td>TEI Publisher 6</td>
   </tr>
@@ -233,24 +249,8 @@
     <td>Music is in the air - MEI and TEI Publisher</td>
   </tr>
   <tr>
-    <td><a href="/posts/tei-vanilla-meeting-summary/"><code>/posts/tei-vanilla-meeting-summary/</code></a></td>
-    <td>TEI &quot;Vanilla&quot; meeting summary</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/vscode/"><code>/posts/vscode/</code></a></td>
-    <td>New Visual Studio Code extension for TEI Publisher</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/tei-publisher-7-final/"><code>/posts/tei-publisher-7-final/</code></a></td>
-    <td>TEI Publisher 7: an example of collaborative development</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/osa20/"><code>/posts/osa20/</code></a></td>
-    <td>Open Source Advent</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/cross-search/"><code>/posts/cross-search/</code></a></td>
-    <td>Cross search</td>
+    <td><a href="/posts/common-exist-db-tei-publisher-deployment-scenarios/"><code>/posts/common-exist-db-tei-publisher-deployment-scenarios/</code></a></td>
+    <td>Common eXist-db / TEI Publisher Deployment Scenarios</td>
   </tr>
   </tbody>
 </table>
