--- a/map/index.html
+++ b/map/index.html
@@ -82,7 +82,7 @@
                     <a href="/tags/events/" class="nav-link">Events</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </div>
 </nav>
 </header>
