--- a/page-list/index.html
+++ b/page-list/index.html
@@ -83,7 +83,7 @@
                     <a href="/tags/events/" class="nav-link">Events</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </div>
 </nav>
 </header>
@@ -256,6 +256,14 @@
 </table>
 </div>
             <aside class="col-4">
+                <form action="/search" class="search-form">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Query" aria-label="Query"
+                            aria-describedby="search-addon" name="query">
+                        <button id="search-button" class="btn btn-primary" type="submit">Search</button>
+                    </div>
+                </form>
+
                 <h3>Tags</h3>
                 <ul class="cloud" role="navigation" aria-label="tag cloud" data-show-value>
   
