--- a/pages/getting-started/index.html
+++ b/pages/getting-started/index.html
@@ -38,6 +38,8 @@
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
+        <a href="/pages/researcher/" class="nav-link">For the researchers</a>
+    </li><li class="nav-item">
         <a href="/pages/getting-started/" class="nav-link active">Getting Started</a>
     </li><li class="nav-item">
         <a href="/pages/get-in-touch/" class="nav-link">Get in Touch</a>
