--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -49,6 +49,8 @@
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
+        <a href="/pages/researcher/" class="nav-link">For the researchers</a>
+    </li><li class="nav-item">
         <a href="/pages/getting-started/" class="nav-link">Getting Started</a>
     </li><li class="nav-item">
         <a href="/pages/get-in-touch/" class="nav-link">Get in Touch</a>
@@ -108,7 +110,7 @@
     </div>
     <div class="row justify-content-md-center m-3 gx-5">
         <div class="col">
-            <a href="pages/home/" class="shortcut btn">
+            <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
             <span>researchers</span>
             </a>
@@ -143,7 +145,7 @@
     </div>
     <div class="row justify-content-md-center m-3 gx-5">
         <div class="col">
-            <a href="pages/home/" class="shortcut btn">
+            <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
             <span>researchers</span>
             </a>
@@ -191,6 +193,10 @@
   <tr>
     <td><a href="/posts/past-meetings/"><code>/posts/past-meetings/</code></a></td>
     <td>Past Community Meetings</td>
+  </tr>
+  <tr>
+    <td><a href="/pages/researcher/"><code>/pages/researcher/</code></a></td>
+    <td>Editors &amp; Researchers</td>
   </tr>
   <tr>
     <td><a href="/posts/"><code>/posts/</code></a></td>
@@ -247,10 +253,6 @@
   <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
-    <td>Tagged “grants”</td>
   </tr>
   </tbody>
 </table>
