--- a/page-list/index.html
+++ b/page-list/index.html
@@ -382,7 +382,12 @@
 </ul>
 
                 <h3>Projects Map <small class="text-muted"><a href="/map/">Expand</a></small></h3>
-                <div id="map" data-zoom="5"></map>
+                <div id="map" data-zoom="5"></div>
+
+                <div class="twitter">
+                    <a class="twitter-timeline" href="https://twitter.com/EEditiones" data-tweet-limit="5" data-chrome="noborders">Tweets by EEditiones</a> 
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
             </aside>
         </div>
     </div>
