deploy: ee6cf2186155c0abb9e192571a07198f251775dc

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div>
         <div class="hero">
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
-            <p>rooted in standards, built by a community, meant to last</p>
+            <p class="m-2">rooted in standards, built by a community, meant to last</p>
             <div>
                 <button class="btn btn-warning">Donate</button>
                 <button class="btn btn-warning">Join</button>
@@ -108,7 +108,7 @@
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
-    <div class="row justify-content-md-center m-3 gx-5">
+    <div class="row justify-content-md-center m-2 gx-lg-2">
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
@@ -143,7 +143,7 @@
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
-    <div class="row justify-content-md-center m-3 gx-5">
+    <div class="row justify-content-md-center m-2 gx-lg-2">
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
@@ -165,7 +165,7 @@
     </div>
 </div>
         </div>
-        <div class="row gx-5">
+        <div class="row gx-lg-5">
             <div class="col">
 <section class="blog">
   
@@ -420,7 +420,7 @@
   
 </div>
 </section></div>
-            <aside class="col-4">
+            <aside class="col-md-4">
                 <form action="/search" class="search-form">
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Query" aria-label="Query"
@@ -547,7 +547,7 @@
                 <h3>Projects Map <small class="text-muted"><a href="/map/">Expand</a></small></h3>
                 <div id="map" data-zoom="5"></div>
 
-                <div class="twitter">
+                <div class="twitter d-none d-lg-block">
                     <a class="twitter-timeline" href="https://twitter.com/EEditiones" data-tweet-limit="5" data-chrome="noborders">Tweets by EEditiones</a> 
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
