deploy: a4e776bf06e874c03d444b07b3ab12c6a75a0e11

--- a/pages/community/index.html
+++ b/pages/community/index.html
@@ -36,6 +36,8 @@
         <a class="dropdown-toggle nav-link active"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
+        <a href="/pages/memory/" class="nav-link">For GLAM sector</a>
+    </li><li class="nav-item">
         <a href="/pages/researcher/" class="nav-link">For the researchers</a>
     </li><li class="nav-item">
         <a href="/pages/getting-started/" class="nav-link">Getting Started</a>
