--- a/pages/researcher/index.html
+++ b/pages/researcher/index.html
@@ -36,6 +36,8 @@
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
+        <a href="/pages/memory/" class="nav-link">For GLAM sector</a>
+    </li><li class="nav-item">
         <a href="/pages/researcher/" class="nav-link active">For the researchers</a>
     </li><li class="nav-item">
         <a href="/pages/getting-started/" class="nav-link">Getting Started</a>
@@ -105,8 +107,12 @@
 <blockquote>
 <p>re-using components, pooling resources and sharing best practices benefits everyone in the community and ensures our projects remain online and maintained for the decades to come</p>
 </blockquote>
-<p>It all starts with your source documents, regardless if they are in <strong>TEI</strong>, other form of <strong>XML</strong> or perhaps even <strong>Word</strong> or Markdown. It doesn't matter if they are ancient inscriptions, correspondence, writer's notebooks or lexicon entries: they can be <strong>easily transformed</strong> into a range of output formats for publication - from a <strong>modern web page</strong> that you can open on your laptop or mobile device, to an <strong>ebook</strong>, a <strong>mobile app</strong>, or a high quality <strong>PDF</strong> for sending <strong>straight to your publisher</strong> for printing.</p>
+<p>It all starts with your source documents, regardless if they are in <strong>TEI</strong>, other form of <strong>XML</strong> or perhaps even <strong>Word</strong> or Markdown. It doesn't matter if they are ancient inscriptions, correspondence, writer's notebooks, lexicon entries or anything else: they can be <strong>easily transformed</strong> into a range of output formats for publication - from a <strong>modern web page</strong> that you can open on your laptop or mobile device, to an <strong>ebook</strong>, a <strong>mobile app</strong>, or a high quality <strong>PDF</strong> for sending <strong>straight to your publisher</strong> for printing.</p>
+<blockquote>
+<p>rooted in standards, built by the community, meant to last</p>
+</blockquote>
 <p>More than that, your publication can be assembled very much <strong>like playing with Lego</strong> blocks, and, like Lego, it <strong>will still fit with others</strong> who embrace the same basic principles, however different they may look and feel on the surface. As a side effect, without any extra effort on your part, you end up with a kind of <strong>survival kit</strong>, resilient data and application package fit for <strong>easy distribution, long-term archiving</strong> but also future hosting and <strong>maintenance</strong> through infrastructure on institutional and national level.</p>
+<p>Photo by <a href="https://unsplash.com/@zoltantasi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Zoltan Tasi</a> on <a href="https://unsplash.com/s/photos/power?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></p>
 
 </main>
 
