deploy: b43ec8508d7f97f6eef3cbc86c18a87f8070c3d7

--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -115,7 +115,7 @@
             <p class="m-2">rooted in standards, built by a community, meant to last</p>
             <div>
                 <button class="btn btn-warning">Donate</button>
-                <button class="btn btn-warning">Join</button>
+                <a href="pages/how-to-become-a-member/" class="btn btn-warning">Join</a>
             </div>
         </div>
         <div class="container d-none d-lg-block">
@@ -263,7 +263,7 @@
             <aside class="col-md-4">
                 <form action="/search" class="search-form">
     <div class="input-group">
-        <input type="text" class="form-control" placeholder="Query" aria-label="Query"
+        <input type="text" class="form-control" aria-label="Query"
             aria-describedby="search-addon" name="query">
         <button id="search-button" class="btn btn-primary" type="submit">Search</button>
     </div>
@@ -393,7 +393,7 @@
     </div>
 </main>
 
-<footer class="p-2 mt-4">
+<footer class="p-2">
     <div>e-editiones | c/o Stadtarchiv der Ortsbürgergemeinde St.Gallen | Notkerstrasse 22 | CH-9000 St. Gallen | info@e-editiones.org<br/>
     IBAN: CH21 0900 0000 1549 5086 6 | BIC: POFICHBEXXX</div>
 </footer>
