--- a/pages/statuten-des-vereins-e-editiones-german/index.html
+++ b/pages/statuten-des-vereins-e-editiones-german/index.html
@@ -166,7 +166,7 @@ a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wis
 
 </main>
 
-<footer class="p-2 mt-4">
+<footer class="p-2">
     <div>e-editiones | c/o Stadtarchiv der Ortsbürgergemeinde St.Gallen | Notkerstrasse 22 | CH-9000 St. Gallen | info@e-editiones.org<br/>
     IBAN: CH21 0900 0000 1549 5086 6 | BIC: POFICHBEXXX</div>
 </footer>
