deploy: c63c917b2b07cb90c02ccc522e64ad281c3fb371

--- a/search/index.html
+++ b/search/index.html
@@ -59,8 +59,6 @@
     </li><li class="nav-item">
         <a href="/pages/community-meetings/" class="nav-link">Community Meetings</a>
     </li><li class="nav-item">
-        <a href="/pages/workshops/" class="nav-link">Workshops</a>
-    </li><li class="nav-item">
         <a href="/map/" class="nav-link">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
@@ -83,6 +81,9 @@
         <a href="/posts/" class="nav-link">Archive</a>
     </li><li class="nav-item">
                     <a href="/tags/events/" class="nav-link">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/map/" class="nav-link">Project Registry</a>
                 </li>
             </ul>
             <div class="icons d-flex justify-content-end">
