--- a/map/index.html
+++ b/map/index.html
@@ -65,8 +65,6 @@
     </li><li class="nav-item">
         <a href="/pages/community-meetings/" class="nav-link">Community Meetings</a>
     </li><li class="nav-item">
-        <a href="/pages/workshops/" class="nav-link">Workshops</a>
-    </li><li class="nav-item">
         <a href="/map/" class="nav-link active">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
@@ -89,6 +87,9 @@
         <a href="/posts/" class="nav-link">Archive</a>
     </li><li class="nav-item">
                     <a href="/tags/events/" class="nav-link">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/map/" class="nav-link active">Project Registry</a>
                 </li>
             </ul>
             <div class="icons d-flex justify-content-end">
